base/minio/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
  namespace: 5stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: 5stack-minio
                operator: In
                values:
                  - "true"
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 9000
            - containerPort: 9090
          startupProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
          command:
            - /bin/bash
            - -c
          args:
            - |
              mkdir -p /data/5stack &&
              minio server /data --console-address :9090 &
              sleep 10 &&
              mc alias set myminio http://localhost:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} &&
              mc mb myminio/${S3_BUCKET} || true
              mc mb myminio/${S3_DB_BACKUP_BUCKET:-5stack-db-backups} || true
              mc admin user add myminio ${S3_ACCESS_KEY} ${S3_SECRET} &&
              mc admin policy attach myminio readwrite --user=${S3_ACCESS_KEY}
              wait
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
