base/minio/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3-console
  namespace: 5stack
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`${S3_CONSOLE_HOST}`)
      kind: Rule
      services:
        - name: minio
          port: 9090
      middlewares:
        - name: large-upload
  tls:
    secretName: 5stack-ssl
